--- a/starter/src/main/resources/static/index.html
+++ b/starter/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="col-md-8">
         <table class="styled-table">
-            <thead>
+            <thead id="thead">
             <tr>
                 <th>GoodsId</th>
                 <th>Quantity</th>
